@@ -179,6 +179,7 @@
     <Compile Include="MouseButtons.cs" />
     <Compile Include="MouseClickException.cs" />
     <Compile Include="MouseEx.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\CommonMeta.cs" />
     <Compile Include="UI.cs" />
